Adding web dockerfile

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -89,7 +89,8 @@ services:
     ports:
       - "3001:3000"
     build:
-      context: ./
+      context: ./web
+      dockerfile: Dockerfile
     networks:
       - app-network
 
