--- a/web/package.json
+++ b/web/package.json
@@ -3,19 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "@toast-ui/react-image-editor": "^1.2.0",
+    "axios": "^0.21.1",
+    "file-saver": "^2.0.2",
+    "filerobot-image-editor": "^3.12.1",
+    "moment": "^2.29.1",
+    "node-sass": "^4.14.1",
+    "prop-types": "^15.7.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
+    "react-markdown": "^6.0.1",
+    "react-particles-js": "^3.4.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.3",
+    "react-simple-badges": "^1.8.0",
+    "react-tabs": "^3.2.2",
+    "rehype-raw": "^5.1.0",
+    "serve": "^11.3.2",
+    "tsparticles": "^1.30.1",
+    "typescript": "^2.8.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "devnoport": "react-scripts start",
+    "dev": "PORT=3001 HOST=0.0.0.0 react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "builddev": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
     "extends": [
