--- a/web/package.json
+++ b/web/package.json
@@ -9,7 +9,6 @@
     "@toast-ui/react-image-editor": "^1.2.0",
     "axios": "^0.21.1",
     "file-saver": "^2.0.2",
-    "filerobot-image-editor": "^3.12.1",
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
@@ -25,7 +24,8 @@
     "rehype-raw": "^5.1.0",
     "serve": "^11.3.2",
     "tsparticles": "^1.30.1",
-    "typescript": "^2.8.0"
+    "typescript": "^2.8.0",
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "devnoport": "react-scripts start",
